* Fix z-index of settings popup * Don't recreate menu items when they already exist when the user has a custom theme

--- a/less/unresponsive.less
+++ b/less/unresponsive.less
@@ -8,7 +8,7 @@
  	margin-right: 2em;
 	border: 1px solid #ccc;
 	border:  2px solid black;
-	z-index:100;
+	z-index:10000;
 	background: inherit;
 	padding-left: 3em;
 	padding-right: 3em;
